# ashura

./: .clang-format  .clang-tidy  .cmake-format.json  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakeSettings.json  COMPILE.sh  CONTRIBUTING.md  Doxyfile.in  GOALS.md  LICENSE  README.md  asan_export.sh  async_guide.md  bugs.txt  build.toml  commands.txt  compile_shaders.ps1  compile_shaders.sh  format.ps1  format.sh  img.py  notes.md  prof.py  skia_config.py  todo.md  todo.txt  tools.md  vcpkg.json  viz.py
ashura/: CMakeLists.txt  algorithms.h  allocator.cc  allocator.h  animation.h  app_config.h  arena_allocator.cc  arena_allocator.h  ashura.cc  ashura2.cc  base64.h  canvas.h  cfg.h  color.h  config.json  config.schema.json  constraint.h  context.h  curve.h  ecs.cc  ecs.h  engine.cc  engine.h  event.h  flat_map.h  font.h  format.cc  format.h  gfx.cc  gfx.h  image.h  image_decoder.h  integrals.h  locale.h  log.cc  log.h  loggers.cc  loggers.h  math.h  media.cc  (+46 more)
ashura/assets/shaders/: canvas.frag  canvas.vert  sdf_glyph.frag  sdf_glyph.vert  test2.vert
ashura/bench/: bench.cc
ashura/core/: gfx.cc  image.h
ashura/deprecated/: ashura.cc  canvas.h  context.h  engine.cc  engine.h  event.h  media.cc  vulkan_canvas_renderer.h  vulkan_context.h  window.h  window_manager.h
ashura/deprecated/subsystems/: http_client.h
ashura/docs/: zoom.md
ashura/dump/: vulkan.h
ashura/editor/: ashura2.cc  editor.cc
ashura/engine/: animation.cc  animation.h  animation_system.h  assets.cc  assets.h  audio.h  audio_system.cc  audio_system.h  camera.h  canvas.cc  canvas.h  clipboard.h  color.h  encoders.cc  encoders.h  engine.cc  engine.h  error.h  errors.h  event.h  file_system.cc  file_system.h  font.cc  font.h  font_atlas.h  font_impl.cc  font_impl.h  font_system.h  font_system_impl.cc  font_system_impl.h  gpu_context.cc  gpu_context.h  gpu_system.cc  gpu_system.h  http_client.cc  http_client.h  ids.h  image_decoder.cc  image_decoder.h  image_system.cc  (+74 more)
ashura/engine/gfx/: vulkan.h
ashura/engine/passes/: bezier_stencil.cc  bezier_stencil.h  bloom.cc  bloom.h  blur.cc  blur.h  chromatic_aberration.cc  chromatic_aberration.h  contour_stencil.cc  contour_stencil.h  fill_stencil.cc  fill_stencil.h  fill_stencil_state.h  fxaa.cc  fxaa.h  msaa.cc  msaa.h  ngon.cc  ngon.h  pbr.cc  pbr.h  poly.cc  poly.h  quad.cc  quad.h  root.cc  root.h  rrect.cc  rrect.h  sdf.cc  sdf.h  ui.cc  ui.h  view.cc  view.h
ashura/engine/pipelines/: bezier_stencil.cc  bezier_stencil.h  bloom.cc  bloom.h  blur.cc  blur.h  fill_rule_stencil.h  fill_stencil.cc  fill_stencil.h  fill_stencil_state.h  ngon.cc  ngon.h  pbr.cc  pbr.h  quad.cc  quad.h  sdf.cc  sdf.h  triangle_fill.cc  triangle_fill.h  vector_path.cc  vector_path.h
ashura/engine/shaders/: bezier_stencil.slang  blur.slang  composite_sdf.slang  contour_stencil.slang  crt.slang  fill_stencil.slang  items.gen.cc  items.gen.h  items.slang  ngon.slang  path_coverage.slang  path_fill.slang  pbr.slang  quad.slang  rrect.slang  sdf.slang  shaders.h  shadertoy.slang  squircle.slang  triangle_fill.slang  vector_path_coverage.slang  vector_path_fill.slang  x.glsl  y.glsl
ashura/engine/tests/: animation.cc  (+10 more)
ashura/gfx/: gfx.cc  gfx.h  gfx.md  image.h  vulkan.cc  vulkan.h
ashura/gpu/: README.md  format.h  gpu.cc  gpu.h  image.h  vma_def.cc  vulkan-x.cc  vulkan.cc  vulkan.h
ashura/passes/: bloom.h  blur.h  chromatic_aberration.h  fxaa.h  pbr.h  rrect.h  view.h
ashura/renderer/: camera.h  light.h  material.cc  material.h  render_context.cc  render_context.h  render_graph.cc  render_graph.h  renderer.cc  renderer.h  renderer.md  scene.cc  scene.h  shader.cc  shader.h  view.cc  view.h
ashura/scripting/: main.cc  main.ll
ashura/shaders/: blur.frag  blur.slang  blur.ub.glsl  blur.vert  convex_poly.frag  convex_poly.ub.glsl  convex_poly.vert  core.glsl  crt.glsl  crt.slang  glyph.frag  glyph.vert  kawase.glsl  kawase_blur.frag  kawase_blur.ub.glsl  kawase_blur.vert  light.glsl  line.ub.glsl  ngon.frag  ngon.slang  ngon.ub.glsl  ngon.vert  pbr.frag  pbr.glsl  pbr.slang  pbr.ub.glsl  pbr.vert  rrect.frag  rrect.glsl  rrect.slang  rrect.ub.glsl  rrect.vert  sdf.glsl  shaders.json  spline_effect.ub.glsl
ashura/src/: AAC.CC  app.cc  ashura.cc  ecs.cc  engine.cc  gfx.cc  lgfx.cc  loggers.cc  media.cc  rcg.cc  rect_pack.cc  rengoku.cc  vulkan_gfx.cc  vulkan_rhi.cc  widget.cc  window.cc  window_api.cc  x.c
ashura/std/: algorithms.h  alias_count.h  allocator.cc  allocator.h  allocators.cc  allocators.h  arena_allocator.cc  arena_allocator.h  async.cc  async.h  backoff.h  bit_span.h  box.h  buffer.h  build.h.in  cfg.h  color.h  constrained.h  dataframe.h  dict.h  dyn.h  enum.gen.h  enum.h  enum.py  error.h  exec.h  flat_map.h  fn.h  format.cc  format.h  fs.cc  fs.h  functional.h  growth.h  hash.cc  hash.h  hash_map.h  image.h  index_pack.gen.h  index_pack.h  (+64 more)
ashura/subsystems/: http_client.cc  http_client.h  image_loader.h  image_manager.h  vulkan_image_manager.h
ashura/tests/: bitvec.cc  gfx.cc  http.cc  layout.cc  lgfx.cc  option.cc  result.cc  sparse_set.cc
ashura/utils/: base64.h  rect_pack.h
ashura/widgets/: box.h  checkbox.h  grid.h  image.h  input.h  padding.h  radio.h  scroll_box.h  stats.h  switch.h  text.h
libwebm_parser/: .gitignore  CMakeLists.txt
stx_ext/: CMakeLists.txt
stx_ext/allocator/: CMakeLists.txt
stx_ext/async/: CMakeLists.txt  README.md
stx_ext/flex/: CMakeLists.txt
stx_ext/mem/: CMakeLists.txt
stx_ext/str/: CMakeLists.txt
stx_ext/task/: CMakeLists.txt
stx_ext/tuple/: tuple.h
stx_ext/vec/: CMakeLists.txt
ui/: CMakeLists.txt  DESIGN.MD  GESTURE_DETECTOR.md
ui/src/: app.cc  compositor.cc  font.cc  font_asset.cc  image_asset.cc  vulkan.cc  widget.cc  window.cc  window_api.cc
ui/tests/: TODO.stx.txt  asset_manager_test.cc  compositor_test.cc  constraint_solver_test.cc  layout_test.cc  mock_widgets.h  pipeline_test.cc  primitives_test.cc  raster_tiles_test.cc  tile_cache_test.cc  todo.md  view_test.cc
ui2d/: CMakeLists.txt
ui2d/src/: compositor.cc
ui2d/tests/: compositor_test.cc  snapshot_test.cc  widget_test.cc
(+708 files in other folders)
