add_subdirectory(async)
add_subdirectory(enum)
add_subdirectory(limits)
add_subdirectory(mem)
add_subdirectory(resource)
add_subdirectory(struct)
add_subdirectory(task)
add_subdirectory(fn)
add_subdirectory(void)
add_subdirectory(spinlock)
add_subdirectory(allocator)
add_subdirectory(vec)
add_subdirectory(str)